...
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="title_activity_new_account">NewAccount</string>
    <string name="signIn">Sign In</string>
    <string name="username">Username</string>
    <string name="createAccount">Create an account</string>
    <string name="password">Password</string>
    <string name="newUsername">Enter a username</string>
    <string name="newPassword">Enter a password</string>
    <string name="newPasswordConfirm">Confirm password</string>
    <string name="signUp">Sign Up</string>
    <string name="register">Sign Up</string>
    <string name="login">Login</string>
    <string name="Vault">Enteries</string>
    <string name="title_activity_add_entry">AddEntry</string>
    <string name="titleEntry">Title</string>
...
